FLUID-5314: Fixed styling of transition to hidden panel. - Fixed the styling so that the collapsing transition is not seen behind the star button.

--- a/src/components/overviewPanel/css/OverviewPanel.css
+++ b/src/components/overviewPanel/css/OverviewPanel.css
@@ -113,6 +113,7 @@
     font-size: 1em;
 }
 
+.fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
 .fl-overviewPanel a:active,
 .fl-overviewPanel a:focus {
     outline: 0.2em solid #27A9E1;
@@ -138,7 +139,6 @@
     font-size: 1.5em;
     font-family: "Fluid-star" !important; /* FLUID-5321: use important to keep learner prefs from changing it. */ 
     font-weight: normal !important; /* Keep UIO from changing the weight of icons. Bold icons look poor. */
-    margin: 0.2em 0 0.2em 0.2em;
     padding: 0.7em 0.3em;
     color: #FFCC00;
     float: left;
@@ -146,6 +146,12 @@
     background-color: #333; /* IE8 */
     background-color: rgba(51,51,51,.96);
     line-height: 1.8em;
+    outline: 0.2em solid #333;
+    outline: 0.2em solid rgba(51,51,51,.96);
+}
+
+.fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus {
+    
 }
 
 .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:before{
@@ -158,8 +164,7 @@
     background-color: rgba(51,51,51,.96);
     height: 100%;
     
-    /* This transition has a delay so that outer fl-overviewPanel-container can execute its transition first.
-       Without this delay both transitions would play together and not create the desired sliding effect. */ 
+    /* Fade out the overviewPanel contents. Otherwise it just disappears. */ 
     transition: visibility 0.1s linear;
     visibility:visible;
 }
@@ -174,8 +179,10 @@
 .fl-overviewPanel-container.fl-overviewPanel-hidden{
     /* make the hidden container the same size as the star button. This way the star button 
      * appears properly and the hidden container doesn't block interaction with content below it.*/
-    width: 3em;
-    height: 4.2em; 
+    width: 2.9em;
+    height: 5.3em; 
+    min-height: 5.3em;
+    
     transition: all 0.2s linear; /* This transition creates the desired sliding effect. */ 
 }
 
@@ -291,6 +298,15 @@
 
 /* Theming */
 
+.fl-theme-bw .fl-overviewPanel-hidden .fl-overviewPanel,
+.fl-theme-wb .fl-overviewPanel-hidden .fl-overviewPanel,
+.fl-theme-yb .fl-overviewPanel-hidden .fl-overviewPanel,
+.fl-theme-by .fl-overviewPanel-hidden .fl-overviewPanel,
+.fl-theme-lgdg .fl-overviewPanel-hidden .fl-overviewPanel { 
+    /* on all themes, hide the right border when "hidden". */
+    border-right: 0;
+}
+
 /* black on white */
 .fl-theme-bw .fl-overviewPanel,
 .fl-theme-bw .fl-overviewPanel-body,
@@ -314,17 +330,21 @@
 }
 
 .fl-theme-bw .fl-overviewPanel a { text-decoration: underline; }
-.fl-theme-bw .fl-overviewPanel *:focus { outline: 0.2em solid #000; }
+
+.fl-theme-bw .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a{
+    outline: 0.2em solid #fff;
+}
+
+.fl-theme-bw .fl-overviewPanel *:focus,
+.fl-theme-bw .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
+.fl-theme-bw .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus  {
+    outline: 0.2em solid #000;
+}
+
+.fl-theme-bw .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
+    outline: 0.1em solid #000;
+}
 .fl-theme-bw .fl-overviewPanel-instructions { border: 0.2em solid #000; }
-
-.fl-theme-bw .fl-overviewPanel-hidden .fl-overviewPanel { /* when hidden */
-    border-width: 0;
-}
-
-.fl-theme-bw .fl-overviewPanel-hidden .fl-overviewPanel-icon-fluidStar a{
-    border: 0.1em solid #000;
-    outline: 0.3em solid #fff;
-}
 
 
 /* white on black */
@@ -350,13 +370,22 @@
 }
 
 .fl-theme-wb .fl-overviewPanel a { text-decoration: underline; }
-.fl-theme-wb .fl-overviewPanel *:focus { outline: 0.2em solid #fff; }
-.fl-theme-wb .fl-overviewPanel-instructions { border: 0.2em solid #fff; }
 
-.fl-theme-wb .fl-overviewPanel-hidden .fl-overviewPanel-icon-fluidStar a{
-    border: 0.1em solid #fff;
-    outline: 0.3em solid #000;
+.fl-theme-wb .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a{
+    outline: 0.2em solid #000;
 }
+
+.fl-theme-wb .fl-overviewPanel *:focus,
+.fl-theme-wb .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
+.fl-theme-wb .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus  {
+    outline: 0.2em solid #fff;
+}
+
+.fl-theme-wb .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
+    outline: 0.1em solid #fff;
+}
+
+.fl-theme-wb .fl-overviewPanel-instructions { border: 0.2em solid #fff; }
 
 
 /* Low contrast: light grey on dark grey */
@@ -382,14 +411,22 @@
 }
 
 .fl-theme-lgdg .fl-overviewPanel a { text-decoration: underline; }
-.fl-theme-lgdg .fl-overviewPanel *:focus { outline: 0.2em solid #bdbdbb; }
-.fl-theme-lgdg .fl-overviewPanel-instructions { border: 0.2em solid #bdbdbb; }
 
-.fl-theme-lgdg .fl-overviewPanel-hidden .fl-overviewPanel-icon-fluidStar a{
-    border: 0.1em solid #bdbdbb;
-    outline: 0.3em solid #555;
+.fl-theme-lgdg .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a{
+    outline: 0.2em solid #555;
 }
 
+.fl-theme-lgdg .fl-overviewPanel *:focus,
+.fl-theme-lgdg .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
+.fl-theme-lgdg .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus {
+    outline: 0.2em solid #bdbdbb;
+}
+
+.fl-theme-lgdg .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
+    outline: 0.1em solid #bdbdbb;
+}
+
+.fl-theme-lgdg .fl-overviewPanel-instructions { border: 0.2em solid #bdbdbb; }
 
 /* Yellow on Black */
 .fl-theme-yb .fl-overviewPanel,
@@ -414,14 +451,22 @@
 }
 
 .fl-theme-yb .fl-overviewPanel a { text-decoration: underline; }
-.fl-theme-yb .fl-overviewPanel *:focus { outline: 0.2em solid #FFFF00; }
-.fl-theme-yb .fl-overviewPanel-instructions { border: 0.2em solid #FFFF00; }
 
-.fl-theme-yb .fl-overviewPanel-hidden .fl-overviewPanel-icon-fluidStar a{
-    border: 0.1em solid #ffff00;
-    outline: 0.3em solid #000;
+.fl-theme-yb .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a{
+    outline: 0.2em solid #000;
 }
 
+.fl-theme-yb .fl-overviewPanel *:focus,
+.fl-theme-yb .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
+.fl-theme-yb .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus {
+     outline: 0.2em solid #FFFF00; 
+ }
+ 
+.fl-theme-yb .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
+    outline: 0.1em solid #FFFF00;
+}
+
+.fl-theme-yb .fl-overviewPanel-instructions { border: 0.2em solid #FFFF00; }
 
 /* Black on Yellow */
 .fl-theme-by .fl-overviewPanel,
@@ -438,6 +483,10 @@
     border-right: 0.2em solid #000;
 }
 
+.fl-theme-by .fl-overviewPanel-hidden .fl-overviewPanel {
+    border: none;
+}
+
 .fl-theme-by .fl-overviewPanel .fl-overviewPanel-title .fl-overviewPanel-icon-fluidStar,
 .fl-theme-by .fl-overviewPanel .fl-overviewPanel-title a,
 .fl-theme-by .fl-overviewPanel .fl-overviewPanel-title {
@@ -445,11 +494,22 @@
     color: #FFFF00;
 }
 
-.fl-theme-by .fl-overviewPanel a { text-decoration: underline; }
-.fl-theme-by .fl-overviewPanel *:focus { outline: 0.2em solid #000; }
-.fl-theme-by .fl-overviewPanel-instructions { border: 0.2em solid #000; }
-
-.fl-theme-by .fl-overviewPanel-hidden .fl-overviewPanel-icon-fluidStar a{
-    border: 0.1em solid #000;
-    outline: 0.3em solid #ffff00;
+.fl-theme-by .fl-overviewPanel a {
+    text-decoration: underline;
 }
+
+.fl-theme-by .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a{
+    outline: 0.2em solid #FFFF00;
+}
+
+.fl-theme-by .fl-overviewPanel *:focus,
+.fl-theme-by .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus,
+.fl-theme-by .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a:focus {
+    outline: 0.2em solid #000;
+}
+
+.fl-theme-by .fl-overviewPanel-hidden .fl-overviewPanel .fl-overviewPanel-icon-fluidStar a {
+    outline: 0.1em solid #000;
+}
+
+.fl-theme-by .fl-overviewPanel-instructions { border: 0.2em solid #000; }
